General style adjusted to fix layout issue
Max-width set to “none” on the specific road trip
container-fluid.article element.

--- a/css/style.css
+++ b/css/style.css
@@ -651,6 +651,7 @@ ul.scroll-list {
 	padding-right: 0px;
 	margin-left: 0px;
 	margin-right: 0px;
+	max-width: none;
 }
 
 #article-roadtrip .col-md-12.article-head {
